curl mail plugin tested